--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ebike",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "homepage": "https://jjimenez723.github.io/ebike",
   "scripts": {
@@ -15,7 +16,11 @@
     "lucide-react": "^0.259.0"
   },
   "devDependencies": {
-    "vite": "^5.1.0",
-    "gh-pages": "^5.0.0"
+    "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.17",
+    "gh-pages": "^5.0.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
